Footer width adjusted from 100% to 70% to avoid overflow

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header {
 }
 .footer{
   margin-top: 150px;
-  width: 100%;
+  width: 70%;
   padding: 100px 15%;
   background: #05315C;
   color: #efefef;
